deployment.yaml
apiVersion: apps/v1beta1 
kind: Deployment 
metadata:
    name: hello-world 
spec:
    replicas: 4
    template:
        metadata:
            labels:
                name: hello-world
        spec: 
            containers:
              - image: tomox1001/wdpress
                imagePullPolicy: Always
                name: hello-world
