pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: hello-world
spec:
    containers:
        - image: tomox1001/wdpress
          imagePullPolicy: Always
          name: hello-world
