service.yaml
apiVersion: v1 
kind: Service 
metadata:
    name: hello-world 
spec:
    type: LoadBalancer
    selector:
        name: hello-world
    ports:
        - port: 8080
