ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: hello-world
spec:
    rules:
    - http:
        paths:
        - path: /*
          backend:
              serviceName: hello-world
              servicePort: 8080
